* added avents.js * repeater delay can now be used * added Formatting and formatText * updated say and tellraw

--- a/src/CommandBlocksJS.csproj
+++ b/src/CommandBlocksJS.csproj
@@ -54,6 +54,7 @@
     <None Include="JavascriptFiles\base.js" />
     <None Include="JavascriptFiles\util.js" />
     <None Include="JavascriptFiles\vanillaCommands.js" />
+    <None Include="JavascriptFiles\events.js" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="JavascriptFiles\" />
