--- a/src/CommandBlocksJS.csproj
+++ b/src/CommandBlocksJS.csproj
@@ -5,8 +5,8 @@
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <ProjectGuid>{9356CEBC-F413-4B4D-90B5-05A342B13447}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>CommandBlocks.js</RootNamespace>
-    <AssemblyName>CommandBlocks.js</AssemblyName>
+    <RootNamespace>CommandBlocksJS</RootNamespace>
+    <AssemblyName>CommandBlocksJS</AssemblyName>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <DebugSymbols>true</DebugSymbols>
@@ -20,7 +20,6 @@
     <Externalconsole>true</Externalconsole>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
-    <DebugType>full</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release</OutputPath>
     <ErrorReport>prompt</ErrorReport>
