--- a/src/CommandBlocksJS.csproj
+++ b/src/CommandBlocksJS.csproj
@@ -56,6 +56,7 @@
     <None Include="JavascriptFiles\events.js" />
     <None Include="Examples\game template.js" />
     <None Include="Examples\Karma %28readme%29.js" />
+    <None Include="JavascriptFiles\tellraw.js" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="JavascriptFiles\" />
