changes to testfor functions
* removed testforblock and testforscore (use validate(command, callback) instead)
* added testfornot function

--- a/CommandBlocksJS.GUI/CommandBlocksJS.GUI.csproj
+++ b/CommandBlocksJS.GUI/CommandBlocksJS.GUI.csproj
@@ -3,7 +3,7 @@
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == 'x86' ">x86</Platform>
+    <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <ProjectGuid>{CBB64BA7-15AB-4A28-96E0-5BFBA8C01C35}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
@@ -78,12 +78,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\src\CommandBlocksJS.csproj">
-      <Project>{9356CEBC-F413-4B4D-90B5-05A342B13447}</Project>
-      <Name>CommandBlocksJS</Name>
-    </ProjectReference>
-  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
@@ -92,4 +86,10 @@
   <Target Name="AfterBuild">
   </Target>
   -->
+  <ItemGroup>
+    <ProjectReference Include="..\CommandBlocksJS\CommandBlocksJS.csproj">
+      <Project>{9356CEBC-F413-4B4D-90B5-05A342B13447}</Project>
+      <Name>CommandBlocksJS</Name>
+    </ProjectReference>
+  </ItemGroup>
 </Project>
