--- a/CommandBlocksJS/CommandBlocksJS.csproj
+++ b/CommandBlocksJS/CommandBlocksJS.csproj
@@ -58,6 +58,7 @@
     <None Include="Examples\Karma %28readme%29.js" />
     <None Include="JavascriptFiles\tellraw.js" />
     <None Include="Examples\1.8 stuff.js" />
+    <None Include="JavascriptFiles\player.js" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="JavascriptFiles\" />
