--- a/CommandBlocksJS/CommandBlocksJS.csproj
+++ b/CommandBlocksJS/CommandBlocksJS.csproj
@@ -42,11 +42,13 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="MinecraftDirection.cs" />
-    <Compile Include="IntVector3.cs" />
-    <Compile Include="JsOutputParser.cs" />
-    <Compile Include="JsFileAPI.cs" />
     <Compile Include="JsScriptExecutor.cs" />
+    <Compile Include="Core\IntVector3.cs" />
+    <Compile Include="Core\MinecraftDirection.cs" />
+    <Compile Include="Core\OutputParser.cs" />
+    <Compile Include="Core\ScriptExecutor.cs" />
+    <Compile Include="Core\ScriptOutput.cs" />
+    <Compile Include="JsApi.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
@@ -63,5 +65,6 @@
   <ItemGroup>
     <Folder Include="JavascriptFiles\" />
     <Folder Include="Examples\" />
+    <Folder Include="Core\" />
   </ItemGroup>
 </Project>
