Added sign function & ServerWrapper
* added sign function to base.js
* added Project ServerWrapper

--- a/Cmd/Cmd.csproj
+++ b/Cmd/Cmd.csproj
@@ -48,4 +48,7 @@
     <Compile Include="IntVector3.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
+  <ItemGroup>
+    <None Include="run.bat" />
+  </ItemGroup>
 </Project>
