--- a/GUI/GUI.csproj
+++ b/GUI/GUI.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{FCDB301D-B8E9-486D-BB14-95EE8D0776ED}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CommandBlocksJS.Cmd.GUI</RootNamespace>
-    <AssemblyName>Cmd.GUI</AssemblyName>
+    <RootNamespace>CommandBlocksJS.GUI</RootNamespace>
+    <AssemblyName>CommandblocksJS.GUI</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
