now compiles & runs again!
fixed some errors and stuff so it actually compiles, runs and writes
commandblocks to worlds again :smile:
anyways the generated commandblocks dont work as e.g. enums are given as
number instead of string value

--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,11 @@ ServerWrapper/obj
 Cmd/bin
 Cmd/obj
 CommandBlocksJS.userprefs
+_compile.bat
 packages/
 *.suo
 *.d.ts
 bin/
 obj/
 Beta/doc/
+Example/*.js
