--- a/Cmd/Cmd.csproj
+++ b/Cmd/Cmd.csproj
@@ -29,10 +29,10 @@
     <Externalconsole>true</Externalconsole>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="Noesis.Javascript">
-      <HintPath>bin\Debug\Noesis.Javascript.dll</HintPath>
+    <Reference Include="Jint">
+      <HintPath>..\packages\Jint.2.4.0\lib\portable-net40+sl50+win+wpa81+wp80\Jint.dll</HintPath>
     </Reference>
+    <Reference Include="System" />
     <Reference Include="Substrate">
       <HintPath>bin\Debug\Substrate.dll</HintPath>
     </Reference>
