gone back to Javascript.NET
error handling with jint is horrible

--- a/Cmd/Cmd.csproj
+++ b/Cmd/Cmd.csproj
@@ -29,8 +29,8 @@
     <Externalconsole>true</Externalconsole>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Jint">
-      <HintPath>..\packages\Jint.2.4.0\lib\portable-net40+sl50+win+wpa81+wp80\Jint.dll</HintPath>
+    <Reference Include="Noesis.Javascript">
+      <HintPath>..\..\Noesis.Javascript.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="Substrate">
@@ -52,5 +52,8 @@
   <ItemGroup>
     <None Include="packages.config" />
     <None Include="run.bat" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Service References\" />
   </ItemGroup>
 </Project>
